# spinmc

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.rs  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  ci.yml  pypi-release.yml  release.yml
examples/: all_config.toml  all_config_cn.toml  plot.py
examples/heisenberg_2d_cri3/: config.toml
examples/heisenberg_2d_cri3_poscar/: POSCAR  README.md  config.toml
examples/heisenberg_3d_cubic/: config.toml  config_by_neighbor.toml
examples/ising_2d_Cri3/: config.toml  config_by_neighbor.toml  result.txt
examples/ising_2d_square/: config.toml  config_by_neighbor.toml  ising_2d_square.py  result.txt
examples/ising_2d_square_distance_range/: config.toml
examples/ising_2d_square_neel/: config.toml  config3.toml  config_by_neighbor.toml
examples/xy_2d_square/: config.toml
nix/: flake.nix
python_src/spinmc/: __init__.py  cli.py  core.py
src/: lib.rs  main.rs  utils.rs  utils_tests.rs
src/calculators/: calculators_tests.rs  hamiltonian.rs  input.rs  mod.rs  onsite.rs  pairs.rs
src/config/: anisotropy.rs  anisotropy_tests.rs  config.rs  exchange.rs  exchange_tests.rs  grid.rs  grid_tests.rs  internal.rs  mod.rs  mod_tests.rs  output.rs  output_tests.rs  raw_config.rs  simulation.rs  simulation_tests.rs  snapshots.rs  snapshots_tests.rs  structure.rs  structure_tests.rs
src/lattice/: grid.rs  grid_tests.rs  mod.rs  neighbors.rs  neighbors_tests.rs  structure.rs  structure_tests.rs
src/monte_carlo/: mc_mod_tests.rs  metropolis.rs  metropolis_tests.rs  mod.rs  stats.rs  stats_tests.rs  wolff.rs  wolff_tests.rs
src/runner/: mod.rs  runner_tests.rs
src/snapshots/: mod.rs
src/spin/: heisenberg.rs  heisenberg_tests.rs  ising.rs  ising_tests.rs  mod.rs  mod_tests.rs  xy.rs  xy_tests.rs
