[package]
name = "mc_curie"
version = "0.1.0"
edition = "2024"
authors = ["mxmf"]


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
itertools = "0.14.0"
ndarray = "0.16.1"
rand = "0.9.1"
rand_core = "0.9.3"
rand_pcg = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hdf5-metno = { version = "0.10.1", optional = true, features = ["static", "zlib"] }
rand_distr = "0.5.1"

[features]
default = []
snapshots = ["hdf5-metno"]


[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
