[package]
name = "spinmc"
version = "0.2.2"
edition = "2024"
authors = ["mxmf"]


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
itertools = "0.15.0"
ndarray = "0.16.1"
rand = "0.9.1"
rand_core = "0.9.3"
rand_pcg = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "1.1.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand_distr = "0.5.1"
colored = "3.0.0"
mimalloc = { version = "0.1.47", optional = true }
pyo3 = { version = "0.29.0",optional = true, features = ["abi3-py310", "generate-import-lib"] }
serde_json = "1.0.142"
ctrlc = "3.4.7"
indicatif = { version = "0.18.4", features = ["rayon"] }

[features]
default = []
mimalloc = ["dep:mimalloc"]
python-extension = ["pyo3"]
snapshots = []


[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"


[lib]
crate-type = ["rlib", "cdylib"]
