[project]
name = "spinmc"
description = "spinmc"
readme = "README.md"
requires-python = ">3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "rtoml>=0.11.0",
    "typer>=0.16.0",
]

[project.scripts]
spinmc = "spinmc:app"


[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "spinmc._spinmc"
features = ["pyo3/extension-module"]
python-source = "python_src"

[dependency-groups]
dev = [
    "matplotlib-stubs>=0.3.2",
    "scipy-stubs>=1.16.1.0",
]
