[project]
name = "spinmc"
description = "spinmc"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
  "cappa>=0.32.1",
  "matplotlib>=3.1,<4.0",
  "numpy>=2.0.2",
  "rtoml>=0.11.0",
  "scipy>=1.2.0",
]

[project.scripts]
spinmc = "spinmc:app"


[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
profile = "release"
module-name = "spinmc._spinmc"
features = ["pyo3/extension-module", "snapshots", "python-extension"]
python-source = "python_src"
strip = true

[dependency-groups]
dev = [
  "matplotlib-stubs>=0.3.2",
  "microsoft-python-type-stubs",
  "scipy-stubs>=1.16.1.0; python_version >= '3.11'",
]

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownMemberType = "none"
reportUnusedParameter = "none"

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }
